--- a/praca.ipynb
+++ b/praca.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing data"
+    "# Przetwarzanie raportów resuscytacyjnych za pomocą OpenAI API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wstęp \n",
+    "Celem niniejszej pracy jest zaprojektowanie i implementacja systemu przetwarzania szpitalnych raportów resuscytacyjnych. Praca skupi się na opracowaniu programu umożliwiającego efektowną i dokładną analizę przebiegu wielu interwencji naraz oraz wyciągnięciu wniosków, które mogą poprawić procedury medyczne. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import danych\n",
+    "W pierwszej części dane w postaci pliku JSON zostają zaimportowane."
    ]
   },
   {
@@ -49,40 +65,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prompt "
+    "### Podział raportów na paczki\n",
+    "W tej sekcji raporty zostają podzielone na paczki (batches), tak, aby zoptymalizować liczbę tokenów wysyłanych do modelu. \n",
+    "Token to najmniejsza jednostka tekstu przetwarzana przez model językowy, taka jak słowo, część słowa, znak interpunkcyjny lub spacja. W przypadku uzywanego tutaj modelu GPT-4-turbo maksymalna liczba tokenów wynosi 4096, stąd zapytanie razem z raportami musi mieścić się w tym zakresie.\n",
+    "Instrukcja wysyłana jest do modelu razem z kolejnymi paczkami az do momentu wyczerpania paczek. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tiktoken\n",
+    "\n",
+    "def split_reports_into_batches(report_list, prompt, max_tokens=4096):\n",
+    "    \"\"\"\n",
+    "    Splits a list of reports into batches based on token limits, ensuring that the total token count\n",
+    "    (including a given prompt) does not exceed the specified maximum tokens per batch.\n",
+    "\n",
+    "    Parameters:\n",
+    "        report_list (list of str): A list of report strings to be split into batches.\n",
+    "        prompt (str): The prompt text to include with each batch, which affects the token limit.\n",
+    "        max_tokens (int, optional): The maximum number of tokens allowed in a single batch, including the prompt, defaults to 4096.\n",
+    "\n",
+    "    Returns:\n",
+    "        list of list of str: A list of batches, where each batch is a list of reports whose combined token count \n",
+    "        (plus the prompt) stays within the maximum token limit.\n",
+    "    \"\"\"\n",
+    "    tokenizer = tiktoken.get_encoding(\"cl100k_base\")\n",
+    "    \n",
+    "    prompt_tokens = len(tokenizer.encode(prompt))\n",
+    "    max_tokens_per_batch = max_tokens - prompt_tokens\n",
+    "\n",
+    "    batches = []\n",
+    "    current_batch = []\n",
+    "    current_tokens = 0\n",
+    "\n",
+    "    for report in report_list:\n",
+    "        report_tokens = tokenizer.encode(report)\n",
+    "        report_token_count = len(report_tokens)\n",
+    "\n",
+    "        if current_tokens + report_token_count > max_tokens_per_batch:\n",
+    "            batches.append(current_batch)\n",
+    "            current_batch = []\n",
+    "            current_tokens = 0\n",
+    "\n",
+    "        current_batch.append(report)\n",
+    "        current_tokens += report_token_count\n",
+    "\n",
+    "    if current_batch:\n",
+    "        batches.append(current_batch)\n",
+    "\n",
+    "    return batches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Połączenie z modelem \n",
+    "Zachodzi domyślnie dla modelu GPT-4-turbo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
-    "\n",
-    "prompt_summarize = \"\"\"\n",
-    "Jesteś specjalistą od analizy danych medycznych. Przeczytaj podane raporty (konsultacje) szpitalne i przyporządkuj kazdy do jednej z dwóch kategorii:\n",
-    "1. **Kategoria 1**: Konsultacja opisuje aktywną resuscytację pacjenta, obejmującą działania takie jak: podjęcie resuscytacji, intubacja, podanie leków ratunkowych (np. adrenaliny), użycie defibrylatora, wykonywanie masażu serca itp.\n",
-    "2. **Kategoria 2**: Konsultacja odnosi się do wcześniejszej resuscytacji, ale nie opisuje aktywnej resuscytacji w trakcie danej konsultacji (np. stan pacjenta po wcześniejszym NZK, informacje o przebytej resuscytacji bez szczegółów interwencji w obecnym czasie).\n",
-    "\n",
-    "Twoje zadanie:\n",
-    "1. Jeśli raport należy do **Kategorii 1**, zamień raport na zestawienie w formie słów kluczowych. Słowa kluczowe mają być zapisane w mianowniku i w pełni standaryzowane. Oto słowa kluczowe, z których masz korzystać w odpowiedzi i z niczego innego:\n",
-    "   - **Mechanizmy**: \"asystolia\" (bradyasystolię tez traktuj jako asystolię), \"VF\" (migotanie komór), \"PEA\" (aktywność elektryczna bez tętna).\n",
-    "   - **Czas**: czas trwania resuscytacji w minutach, określony jako różnica czasu zakończenia resuscytacji i jej rozpoczęcia lub wystąpienia NZK (\"czas X\"). Jeśli brak informacji, pomiń parametr czasu.\n",
-    "   - **Procedury**: \"intubacja\", \"lucas\", \"ambu\", \"masaż serca\", \"defibrylacja\", podane leki: \"adrenalina\", \"bikarbonat\", \"amiodaron\", \"inne leki\".\n",
-    "   - **Wynik**: \"ROSC\", \"zgon\".\n",
-    "\n",
-    "   Jeśli w raporcie brakuje danych, pomiń te parametry w odpowiedzi. Zachowaj standardowy format wyjściowy.\n",
-    "\n",
-    "2. Jeśli raport należy do **Kategorii 2**, zwróć dokładnie tekst: 'BRAK'.\n",
-    "\n",
-    "### Przykłady\n",
-    "**Raporty:**  \n",
-    "[\"Wezwanie na interwencję z powodu nagłego zatrzymania krążenia (NZK). Według relacji personelu SOR, zatrzymanie krążenia nastąpiło około godziny 14:30 w mechanizmie asystolii. Natychmiast rozpoczęto RK, wykonując masaż zewnętrzny serca oraz intubując pacjenta przez usta. Rozpoczęto wentylację przy pomocy worka Ambu, a masaż serca kontynuowano przy użyciu urządzenia Lucas.\n",
-    "W trakcie działań podano łącznie 6 mg adrenaliny. Pomimo przeprowadzonych działań resuscytacyjnych, nie uzyskano ROSC. O godzinie 15:00 stwierdzono zgon pacjenta.\", \"Przy przybyciu pacjent był masowany oraz wentylowany za pomocą worka Ambu. Pacjenta zaintubowano przez usta rurką 8.5. Podawano adrenalinę zgodnie z aktualnymi wytycznymi. Pomimo prowadzonej akcji resuscytacyjnej nie uzyskano ROSC. O godzinie 16:10 stwierdzono zgon chorego.\", \"Pacjent NN o nieznanej przeszłości chorobowej, zaniedbany higienicznie. Stan po NZK i skutecznej resuscytacji wykonanej przez ZRM. Obecnie pacjent w stanie śpiączki, wentylowany mechanicznie, hemodynamicznie stabilny na wlewie noradrenaliny. W wykonanym TK głowy wykluczono krwawienie. Zalecenia: pełne monitorowanie, kontrolne badania laboratoryjne, RTG klatki piersiowej, ewentualna decyzja o koronarografii po ocenie stanu neurologicznego.\"]\n",
-    "**Odpowiedź:**  \n",
-    "[\"asystolia, masaż serca, intubacja, ambu, lucas, adrenalina, czas 30, zgon\", \"masaż serca, intubacja, ambu, adrenalina, zgon\", \"BRAK\"]\n",
-    "\"\"\"\n",
     "\n",
     "def get_response(prompt):\n",
     "    \"\"\"\n",
@@ -124,7 +176,79 @@
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"An unexpected error occurred: {e}\")\n",
-    "        raise  \n",
+    "        raise "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prompt i przetwarzanie odpowiedzi modelu\n",
+    "Prompt wysyłany do modelu ma dwie funkcje. \n",
+    "\n",
+    "1. Oddzielenie raportów resuscytacyjnych od raportów jedyne wspominających o poprzedniej resucytacji (w tej sytuacji model ma zwrócić łańcuch znaków 'BRAK'). \n",
+    "\n",
+    "2. Zwrócenie przez model odpowiedzi na raport resuscytacyjny w postaci oddzielonych od siebie przecinkiem słów kluczowych (takich jak asystolia, ambu, defibrylacja, ROSC), które mają informować w jak najbardziej skróconej i gotowej do przetworzenia formie o procedurach, jakie miały miejsce podczas resuscytacji. \n",
+    "\n",
+    "Treść wszystkich raportów jest wysoce róznorodna i pojawiają się w nich takze informacje o np. problemach związanych z intubacją, chorobach współtowarzyszących pacjenta lub kilkukrotnych defibrylacjach podczas jednej resuscytacji. W promptcie skupiono się jednak na najczęściej powtarzanych procedurach, ograniczając \"słownik\" odpowiedzi modelu do konkretnych pojęć. \n",
+    "\n",
+    "W tej instrukcji wykorzystano następujące metody prompt engineering: \n",
+    "#### Role instruction \n",
+    "(\"Jesteś specjalistą od analizy danych medycznych\"): Pomaga skoncentrować działanie modelu na odpowiedniej dziedzinie i nadaje kontekst.\n",
+    "\n",
+    "#### Explicit instructions\n",
+    "Szczegółowo opisano zadanie podziału raportów na dwie kategorie i podano wytyczne, jak postępować w przypadku kazdej z kategorii. \n",
+    "\n",
+    "#### Constrained output\n",
+    "Zdefiniowano słownik pojęć, aby zredukować ryzyko uzycia nieodpowiednich terminów. \n",
+    "\n",
+    "#### Few-Shot Learning\n",
+    "Dołączono przykłady raportów i ich odpowiedzi. \n",
+    "\n",
+    "#### Standardized Output \n",
+    "Wymóg utrzymania standardowego formatu odpowiedzi w mianowniku (np. “czas X”, “adrenalina”).\n",
+    "\n",
+    "#### Disambiguation \n",
+    "Rozwiązano potencjalne niejasności poprzez wyjaśnienie wyjątków (np. bradyasystolia → asystolia) oraz oczekiwana reakcja na brak danych (“BRAK”) została zdefiniowana jednoznacznie.\n",
+    "\n",
+    "#### Task Prioritization\n",
+    "Zadanie jest podzielone na dwa logiczne kroki:\n",
+    "\t1.\tPrzyporządkowanie raportu do kategorii.\n",
+    "\t2.\tGenerowanie odpowiedzi w formie słów kluczowych lub zwrócenie “BRAK”.\n",
+    "\n",
+    "#### Highlighting Key Points\n",
+    "Uzycie pogrubienia (\"**Kategoria 1**\") i dodatkowych tagów (<\\raporty>) ułatwiające modelowi priorytetyzację."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_summarize = \"\"\"\n",
+    "Jesteś specjalistą od analizy danych medycznych. Przeczytaj podane raporty (konsultacje) szpitalne i przyporządkuj kazdy do jednej z dwóch kategorii:\n",
+    "1. **Kategoria 1**: Konsultacja opisuje aktywną resuscytację pacjenta, obejmującą działania takie jak: podjęcie resuscytacji, intubacja, podanie leków ratunkowych (np. adrenaliny), użycie defibrylatora, wykonywanie masażu serca itp.\n",
+    "2. **Kategoria 2**: Konsultacja odnosi się do wcześniejszej resuscytacji, ale nie opisuje aktywnej resuscytacji w trakcie danej konsultacji (np. stan pacjenta po wcześniejszym NZK, informacje o przebytej resuscytacji bez szczegółów interwencji w obecnym czasie).\n",
+    "\n",
+    "Twoje zadanie:\n",
+    "1. Jeśli raport należy do **Kategorii 1**, zamień raport na zestawienie w formie słów kluczowych. Słowa kluczowe mają być zapisane w mianowniku i w pełni standaryzowane. Oto słowa kluczowe, z których masz korzystać w odpowiedzi i z niczego innego:\n",
+    "   - **Mechanizmy**: \"asystolia\" (bradyasystolię tez traktuj jako asystolię), \"VF\" (migotanie komór), \"PEA\" (aktywność elektryczna bez tętna).\n",
+    "   - **Czas**: czas trwania resuscytacji w minutach, określony jako różnica czasu zakończenia resuscytacji i jej rozpoczęcia lub wystąpienia NZK (\"czas X\"). Jeśli brak informacji, pomiń parametr czasu.\n",
+    "   - **Procedury**: \"intubacja\", \"lucas\", \"ambu\", \"masaż serca\", \"defibrylacja\", podane leki: \"adrenalina\", \"bikarbonat\", \"amiodaron\", \"inne leki\".\n",
+    "   - **Wynik**: \"ROSC\", \"zgon\".\n",
+    "\n",
+    "   Jeśli w raporcie brakuje danych, pomiń te parametry w odpowiedzi. Zachowaj standardowy format wyjściowy.\n",
+    "\n",
+    "2. Jeśli raport należy do **Kategorii 2**, zwróć dokładnie tekst: 'BRAK'.\n",
+    "\n",
+    "### Przykłady\n",
+    "**Raporty:**  \n",
+    "[\"Wezwanie na interwencję z powodu nagłego zatrzymania krążenia (NZK). Według relacji personelu SOR, zatrzymanie krążenia nastąpiło około godziny 14:30 w mechanizmie asystolii. Natychmiast rozpoczęto RK, wykonując masaż zewnętrzny serca oraz intubując pacjenta przez usta. Rozpoczęto wentylację przy pomocy worka Ambu, a masaż serca kontynuowano przy użyciu urządzenia Lucas.\n",
+    "W trakcie działań podano łącznie 6 mg adrenaliny. Pomimo przeprowadzonych działań resuscytacyjnych, nie uzyskano ROSC. O godzinie 15:00 stwierdzono zgon pacjenta.\", \"Przy przybyciu pacjent był masowany oraz wentylowany za pomocą worka Ambu. Pacjenta zaintubowano przez usta rurką 8.5. Podawano adrenalinę zgodnie z aktualnymi wytycznymi. Pomimo prowadzonej akcji resuscytacyjnej nie uzyskano ROSC. O godzinie 16:10 stwierdzono zgon chorego.\", \"Pacjent NN o nieznanej przeszłości chorobowej, zaniedbany higienicznie. Stan po NZK i skutecznej resuscytacji wykonanej przez ZRM. Obecnie pacjent w stanie śpiączki, wentylowany mechanicznie, hemodynamicznie stabilny na wlewie noradrenaliny. W wykonanym TK głowy wykluczono krwawienie. Zalecenia: pełne monitorowanie, kontrolne badania laboratoryjne, RTG klatki piersiowej, ewentualna decyzja o koronarografii po ocenie stanu neurologicznego.\"]\n",
+    "**Odpowiedź:**  \n",
+    "[\"asystolia, masaż serca, intubacja, ambu, lucas, adrenalina, czas 30, zgon\", \"masaż serca, intubacja, ambu, adrenalina, zgon\", \"BRAK\"]\n",
+    "\"\"\" \n",
     "\n",
     "def summarize_batches(batches):\n",
     "    \"\"\"\n",
@@ -159,42 +283,6 @@
     "            print(f\"Error processing batch: {batch}\\nError: {e}\")\n",
     "\n",
     "    return combined_summaries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tiktoken\n",
-    "\n",
-    "def split_reports_into_batches(report_list, prompt, max_tokens=4096):\n",
-    "    tokenizer = tiktoken.get_encoding(\"cl100k_base\")\n",
-    "    \n",
-    "    prompt_tokens = len(tokenizer.encode(prompt))\n",
-    "    max_tokens_per_batch = max_tokens - prompt_tokens\n",
-    "\n",
-    "    batches = []\n",
-    "    current_batch = []\n",
-    "    current_tokens = 0\n",
-    "\n",
-    "    for report in report_list:\n",
-    "        report_tokens = tokenizer.encode(report)\n",
-    "        report_token_count = len(report_tokens)\n",
-    "\n",
-    "        if current_tokens + report_token_count > max_tokens_per_batch:\n",
-    "            batches.append(current_batch)\n",
-    "            current_batch = []\n",
-    "            current_tokens = 0\n",
-    "\n",
-    "        current_batch.append(report)\n",
-    "        current_tokens += report_token_count\n",
-    "\n",
-    "    if current_batch:\n",
-    "        batches.append(current_batch)\n",
-    "\n",
-    "    return batches"
    ]
   },
   {
@@ -261,21 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sk-proj-upFwAYD23HiRbUiSjiMUT3BlbkFJarFyI4evt8sILhomXDpd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "key = os.getenv(\"OPENAI_API_KEY\")\n",
     "client = OpenAI(api_key=key)\n",
     "\n",
+    "#test\n",
     "# pozbyc sie BRAK\n",
     "# sprawdzic stosunek BRAK do wszystkich \n",
     "# dac dane do pandas? "
