--- a/praca.ipynb
+++ b/praca.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        " 'asystolia, masaż serca, intubacja, ambu, adrenalina, zgon']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "[336 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "[271 rows x 4 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,6 +662,247 @@
     "processed_data = df[\"report\"].apply(process_report)\n",
     "\n",
     "df_processed = pd.DataFrame(processed_data.tolist())\n",
+    "df_processed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mechanizmy\n",
+    "Informacje ekstrahowane z  mechanizmów NZK (asystolia, VF, PEA) to:\n",
+    "1. **Liczba wystąpień** każdego mechanizmu.\n",
+    "2. **Częstość współwystępowanima** mechanizmów w jednym raporcie.\n",
+    "3. **Proporcja** każdego mechanizmu względem całości raportów."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   mechanism  count\n",
+      "0  asystolia    173\n",
+      "1         VF     44\n",
+      "2        PEA     95\n",
+      "      co_occurrence  count\n",
+      "0   (VF, asystolia)     20\n",
+      "1         (PEA, VF)      8\n",
+      "2  (PEA, asystolia)     30\n",
+      "   mechanism  proportion\n",
+      "0  asystolia    0.638376\n",
+      "1         VF    0.162362\n",
+      "2        PEA    0.350554\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "from itertools import combinations\n",
+    "\n",
+    "# Zamiana wartości NaN na puste listy w celu łatwiejszego przetwarzania\n",
+    "df.loc[:, \"mechanisms\"] = df_processed[\"mechanisms\"].apply(lambda x: x if isinstance(x, list) else [])\n",
+    "\n",
+    "# 1. Liczba wystąpień kazdego mechanizmu\n",
+    "mechanism_counts = Counter([mech for mechs in df[\"mechanisms\"] for mech in mechs])\n",
+    "\n",
+    "# 2. Częstość współwystępowania mechanizmów w jednym raporcie\n",
+    "co_occurrence_counts = Counter()\n",
+    "for mechs in df[\"mechanisms\"]:\n",
+    "    co_occurrence_counts.update(combinations(sorted(mechs), 2))\n",
+    "\n",
+    "# 3. Proporcja kazdego mechanizmu względem całości raportów\n",
+    "total_reports = len(df)\n",
+    "mechanism_proportions = {key: count / total_reports for key, count in mechanism_counts.items()}\n",
+    "\n",
+    "mechanism_counts_df = pd.DataFrame.from_dict(mechanism_counts, orient=\"index\", columns=[\"count\"])\n",
+    "co_occurrence_counts_df = pd.DataFrame.from_dict(co_occurrence_counts, orient=\"index\", columns=[\"count\"])\n",
+    "mechanism_proportions_df = pd.DataFrame.from_dict(mechanism_proportions, orient=\"index\", columns=[\"proportion\"])\n",
+    "\n",
+    "# Reset indeksu dla czytelności \n",
+    "mechanism_counts_df.reset_index(inplace=True)\n",
+    "mechanism_counts_df.rename(columns={\"index\": \"mechanism\"}, inplace=True)\n",
+    "\n",
+    "co_occurrence_counts_df.reset_index(inplace=True)\n",
+    "co_occurrence_counts_df.rename(columns={\"index\": \"co_occurrence\"}, inplace=True)\n",
+    "\n",
+    "mechanism_proportions_df.reset_index(inplace=True)\n",
+    "mechanism_proportions_df.rename(columns={\"index\": \"mechanism\"}, inplace=True)\n",
+    "\n",
+    "print(mechanism_counts_df)\n",
+    "print(co_occurrence_counts_df)\n",
+    "print(mechanism_proportions_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Czas trwania resuscytacji \n",
+    "Informacje istotne to: \n",
+    "1. **Najkrótszy czas** resuscytacji.\n",
+    "2. **Najdłuższy czas** resuscytacji.\n",
+    "3. **Średni czas** resuscytacji.\n",
+    "4. **Mediana czasu** resuscytacji.\n",
+    "5. **Odchylenie standardowe czasu** resuscytacji (zmienność w czasie trwania).\n",
+    "6. **Ilość raportów** zawierających brak danych na temat czasu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mechanisms</th>\n",
+       "      <th>procedures</th>\n",
+       "      <th>result</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[asystolia]</td>\n",
+       "      <td>[adrenalina, ambu, intubacja, lucas, masaż serca]</td>\n",
+       "      <td>[zgon]</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[asystolia]</td>\n",
+       "      <td>[adrenalina, ambu, intubacja, masaż serca]</td>\n",
+       "      <td>[zgon]</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[VF]</td>\n",
+       "      <td>[adrenalina, amiodaron, defibrylacja, inne lek...</td>\n",
+       "      <td>[ROSC]</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[asystolia]</td>\n",
+       "      <td>[adrenalina, ambu, intubacja, masaż serca]</td>\n",
+       "      <td>[zgon]</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[asystolia]</td>\n",
+       "      <td>[adrenalina, bikarbonat, inne leki, intubacja,...</td>\n",
+       "      <td>[ROSC]</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>[asystolia]</td>\n",
+       "      <td>[intubacja]</td>\n",
+       "      <td>[zgon]</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>267</th>\n",
+       "      <td>[PEA]</td>\n",
+       "      <td>[adrenalina, intubacja, lucas, masaż serca]</td>\n",
+       "      <td>[zgon]</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td>None</td>\n",
+       "      <td>[adrenalina, ambu, intubacja, lucas, masaż serca]</td>\n",
+       "      <td>[ROSC]</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>None</td>\n",
+       "      <td>[adrenalina, intubacja, masaż serca]</td>\n",
+       "      <td>[zgon]</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>[asystolia]</td>\n",
+       "      <td>[adrenalina, masaż serca]</td>\n",
+       "      <td>[zgon]</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>271 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mechanisms                                         procedures  result  \\\n",
+       "0    [asystolia]  [adrenalina, ambu, intubacja, lucas, masaż serca]  [zgon]   \n",
+       "1    [asystolia]         [adrenalina, ambu, intubacja, masaż serca]  [zgon]   \n",
+       "2           [VF]  [adrenalina, amiodaron, defibrylacja, inne lek...  [ROSC]   \n",
+       "3    [asystolia]         [adrenalina, ambu, intubacja, masaż serca]  [zgon]   \n",
+       "4    [asystolia]  [adrenalina, bikarbonat, inne leki, intubacja,...  [ROSC]   \n",
+       "..           ...                                                ...     ...   \n",
+       "266  [asystolia]                                        [intubacja]  [zgon]   \n",
+       "267        [PEA]        [adrenalina, intubacja, lucas, masaż serca]  [zgon]   \n",
+       "268         None  [adrenalina, ambu, intubacja, lucas, masaż serca]  [ROSC]   \n",
+       "269         None               [adrenalina, intubacja, masaż serca]  [zgon]   \n",
+       "270  [asystolia]                          [adrenalina, masaż serca]  [zgon]   \n",
+       "\n",
+       "     time  \n",
+       "0    30.0  \n",
+       "1     NaN  \n",
+       "2     NaN  \n",
+       "3     NaN  \n",
+       "4     8.0  \n",
+       "..    ...  \n",
+       "266   NaN  \n",
+       "267   NaN  \n",
+       "268  10.0  \n",
+       "269   NaN  \n",
+       "270  20.0  \n",
+       "\n",
+       "[271 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "df_processed"
    ]
   },
