--- a/praca.ipynb
+++ b/praca.ipynb
@@ -754,156 +754,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mechanisms</th>\n",
-       "      <th>procedures</th>\n",
-       "      <th>result</th>\n",
-       "      <th>time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[asystolia]</td>\n",
-       "      <td>[adrenalina, ambu, intubacja, lucas, masaż serca]</td>\n",
-       "      <td>[zgon]</td>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[asystolia]</td>\n",
-       "      <td>[adrenalina, ambu, intubacja, masaż serca]</td>\n",
-       "      <td>[zgon]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[VF]</td>\n",
-       "      <td>[adrenalina, amiodaron, defibrylacja, inne lek...</td>\n",
-       "      <td>[ROSC]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[asystolia]</td>\n",
-       "      <td>[adrenalina, ambu, intubacja, masaż serca]</td>\n",
-       "      <td>[zgon]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[asystolia]</td>\n",
-       "      <td>[adrenalina, bikarbonat, inne leki, intubacja,...</td>\n",
-       "      <td>[ROSC]</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>[asystolia]</td>\n",
-       "      <td>[intubacja]</td>\n",
-       "      <td>[zgon]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>267</th>\n",
-       "      <td>[PEA]</td>\n",
-       "      <td>[adrenalina, intubacja, lucas, masaż serca]</td>\n",
-       "      <td>[zgon]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>268</th>\n",
-       "      <td>None</td>\n",
-       "      <td>[adrenalina, ambu, intubacja, lucas, masaż serca]</td>\n",
-       "      <td>[ROSC]</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>269</th>\n",
-       "      <td>None</td>\n",
-       "      <td>[adrenalina, intubacja, masaż serca]</td>\n",
-       "      <td>[zgon]</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>270</th>\n",
-       "      <td>[asystolia]</td>\n",
-       "      <td>[adrenalina, masaż serca]</td>\n",
-       "      <td>[zgon]</td>\n",
-       "      <td>20.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>271 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      mechanisms                                         procedures  result  \\\n",
-       "0    [asystolia]  [adrenalina, ambu, intubacja, lucas, masaż serca]  [zgon]   \n",
-       "1    [asystolia]         [adrenalina, ambu, intubacja, masaż serca]  [zgon]   \n",
-       "2           [VF]  [adrenalina, amiodaron, defibrylacja, inne lek...  [ROSC]   \n",
-       "3    [asystolia]         [adrenalina, ambu, intubacja, masaż serca]  [zgon]   \n",
-       "4    [asystolia]  [adrenalina, bikarbonat, inne leki, intubacja,...  [ROSC]   \n",
-       "..           ...                                                ...     ...   \n",
-       "266  [asystolia]                                        [intubacja]  [zgon]   \n",
-       "267        [PEA]        [adrenalina, intubacja, lucas, masaż serca]  [zgon]   \n",
-       "268         None  [adrenalina, ambu, intubacja, lucas, masaż serca]  [ROSC]   \n",
-       "269         None               [adrenalina, intubacja, masaż serca]  [zgon]   \n",
-       "270  [asystolia]                          [adrenalina, masaż serca]  [zgon]   \n",
-       "\n",
-       "     time  \n",
-       "0    30.0  \n",
-       "1     NaN  \n",
-       "2     NaN  \n",
-       "3     NaN  \n",
-       "4     8.0  \n",
-       "..    ...  \n",
-       "266   NaN  \n",
-       "267   NaN  \n",
-       "268  10.0  \n",
-       "269   NaN  \n",
-       "270  20.0  \n",
-       "\n",
-       "[271 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               Metric       Value\n",
+      "0                     Najkrótszy czas    1.000000\n",
+      "1                     Najdłuższy czas  288.000000\n",
+      "2                         Średni czas   33.725926\n",
+      "3                       Mediana czasu   25.000000\n",
+      "4        Odchylenie standardowe czasu   31.836201\n",
+      "5  Ilość raportów bez danych o czasie  136.000000\n"
+     ]
     }
    ],
    "source": [
-    "df_processed"
+    "if \"time\" in df_processed.columns:\n",
+    "    df.loc[:, \"time\"] = pd.to_numeric(df_processed[\"time\"], errors=\"coerce\")\n",
+    "else:\n",
+    "    raise ValueError(\"The 'time' column does not exist in the DataFrame.\")\n",
+    "\n",
+    "# Statystyki\n",
+    "min_time = df[\"time\"].min()\n",
+    "max_time = df[\"time\"].max()\n",
+    "mean_time = df[\"time\"].mean()\n",
+    "median_time = df[\"time\"].median()\n",
+    "std_time = df[\"time\"].std()\n",
+    "missing_time_count = df[\"time\"].isna().sum()\n",
+    "\n",
+    "time_stats = {\n",
+    "    \"Najkrótszy czas\": min_time,\n",
+    "    \"Najdłuższy czas\": max_time,\n",
+    "    \"Średni czas\": mean_time,\n",
+    "    \"Mediana czasu\": median_time,\n",
+    "    \"Odchylenie standardowe czasu\": std_time,\n",
+    "    \"Ilość raportów bez danych o czasie\": missing_time_count,\n",
+    "}\n",
+    "\n",
+    "time_stats_df = pd.DataFrame(list(time_stats.items()), columns=[\"Metric\", \"Value\"])\n",
+    "\n",
+    "print(time_stats_df)"
    ]
   },
   {
