--- a/praca.ipynb
+++ b/praca.ipynb
@@ -800,6 +800,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Procedury \n",
+    "Podzielono dodatkowo na trzy kategorie: leki, urządzenia i metodykę.\n",
+    "1. **Liczba wystąpień** każdej procedury.\n",
+    "2. **Proporcja wykorzystania** poszczególnych procedur (np. jaki procent raportów zawiera intubację?).\n",
+    "3. **Współwystępowanie procedur** w jednym raporcie (np. intubacja + lucas + adrenalina).\n",
+    "4. **Najczęściej stosowane procedury** w raportach.\n",
+    "5. **Zależności między procedurami** i wynikami (np. jaki procent raportów z ROSC zawierał defibrylację?)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            count\n",
+      "adrenalina    176\n",
+      "amiodaron      12\n",
+      "bikarbonat     37\n",
+      "inne leki      48\n",
+      "       proportion\n",
+      "ambu     0.332103\n",
+      "lucas    0.225092\n",
+      "                             count\n",
+      "(defibrylacja, intubacja)       40\n",
+      "(defibrylacja, masaż serca)     39\n",
+      "(defibrylacja, wentylacja)      13\n",
+      "(intubacja, masaż serca)       214\n",
+      "(intubacja, wentylacja)         90\n",
+      "(masaż serca, wentylacja)       85\n"
+     ]
+    }
+   ],
+   "source": [
+    "if \"procedures\" in df_processed.columns:\n",
+    "    df_processed.loc[:, \"procedures\"] = df_processed[\"procedures\"].apply(\n",
+    "        lambda x: x if isinstance(x, list) else []\n",
+    "    )\n",
+    "else:\n",
+    "    raise ValueError(\"The 'procedures' column does not exist in the DataFrame.\")\n",
+    "\n",
+    "# Kategorie klasyfikacji\n",
+    "medications = {\"adrenalina\", \"bikarbonat\", \"amiodaron\", \"inne leki\"}\n",
+    "devices = {\"lucas\", \"ambu\"}\n",
+    "methodology = {\"masaż serca\", \"intubacja\", \"defibrylacja\", \"wentylacja\"}\n",
+    "\n",
+    "def classify_procedures(procedures):\n",
+    "    meds = [proc for proc in procedures if proc in medications]\n",
+    "    devs = [proc for proc in procedures if proc in devices]\n",
+    "    meth = [proc for proc in procedures if proc in methodology]\n",
+    "    # Jeśli w urządzeniach jest 'ambu', oznacza to równocześnie wystąpienie wentylacji w metodyce\n",
+    "    if \"ambu\" in devs:\n",
+    "        meth.append(\"wentylacja\")\n",
+    "    return meds, devs, meth\n",
+    "\n",
+    "df_processed[[\"medications\", \"devices\", \"methodology\"]] = df_processed[\"procedures\"].apply(\n",
+    "    lambda procs: pd.Series(classify_procedures(procs))\n",
+    ")\n",
+    "\n",
+    "# 1. Liczba wystąpień kazdej procedury\n",
+    "medication_counts = Counter([med for meds in df_processed[\"medications\"] for med in meds])\n",
+    "device_counts = Counter([dev for devs in df_processed[\"devices\"] for dev in devs])\n",
+    "methodology_counts = Counter([meth for meths in df_processed[\"methodology\"] for meth in meths])\n",
+    "\n",
+    "# 2. Proporcja raportów z kazdym elementem\n",
+    "medication_proportions = {med: count / len(df_processed) for med, count in medication_counts.items()}\n",
+    "device_proportions = {dev: count / len(df_processed) for dev, count in device_counts.items()}\n",
+    "methodology_proportions = {meth: count / len(df_processed) for meth, count in methodology_counts.items()}\n",
+    "\n",
+    "# 3. Współwystępowanie w kazdej kategorii\n",
+    "medication_cooccurrences = Counter()\n",
+    "device_cooccurrences = Counter()\n",
+    "methodology_cooccurrences = Counter()\n",
+    "\n",
+    "for meds in df_processed[\"medications\"]:\n",
+    "    medication_cooccurrences.update(combinations(sorted(meds), 2))\n",
+    "for devs in df_processed[\"devices\"]:\n",
+    "    device_cooccurrences.update(combinations(sorted(devs), 2))\n",
+    "for meths in df_processed[\"methodology\"]:\n",
+    "    methodology_cooccurrences.update(combinations(sorted(meths), 2))\n",
+    "\n",
+    "medication_counts_df = pd.DataFrame.from_dict(medication_counts, orient=\"index\", columns=[\"count\"]).sort_index()\n",
+    "device_counts_df = pd.DataFrame.from_dict(device_counts, orient=\"index\", columns=[\"count\"]).sort_index()\n",
+    "methodology_counts_df = pd.DataFrame.from_dict(methodology_counts, orient=\"index\", columns=[\"count\"]).sort_index()\n",
+    "\n",
+    "medication_proportions_df = pd.DataFrame.from_dict(medication_proportions, orient=\"index\", columns=[\"proportion\"]).sort_index()\n",
+    "device_proportions_df = pd.DataFrame.from_dict(device_proportions, orient=\"index\", columns=[\"proportion\"]).sort_index()\n",
+    "methodology_proportions_df = pd.DataFrame.from_dict(methodology_proportions, orient=\"index\", columns=[\"proportion\"]).sort_index()\n",
+    "\n",
+    "medication_cooccurrences_df = pd.DataFrame.from_dict(medication_cooccurrences, orient=\"index\", columns=[\"count\"]).sort_index()\n",
+    "device_cooccurrences_df = pd.DataFrame.from_dict(device_cooccurrences, orient=\"index\", columns=[\"count\"]).sort_index()\n",
+    "methodology_cooccurrences_df = pd.DataFrame.from_dict(methodology_cooccurrences, orient=\"index\", columns=[\"count\"]).sort_index()\n",
+    "\n",
+    "# Przykładowe wyniki\n",
+    "print(medication_counts_df)\n",
+    "print(device_proportions_df)\n",
+    "print(methodology_cooccurrences_df)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
